BA - Users: Setting up the DELETE and UPDATE for Users.
