# backEnd/documentation/apiSpec.yml
@@ -1424,7 +1424,6 @@ components:
       - upd_profile
       - upd_is_admin
       - upd_user_password
-      - upd_user_password_confirmation
       properties:
         upd_name:
           type: string
@@ -1446,10 +1445,6 @@ components:
           type: string
           example: "admin1"
           description: "Must match the pattern '^[A-Za-z0-9.!#$%&‘*+=?^_`{|}~-]{6,}$'. Must have at least 6 characters."
-        upd_user_password_confirmation:
-          type: string
-          example: "admin1"
-          description: "Must match the value of the field 'user_password'."
     #*******************************************************#
     ##  Companies' requests:
     req.createCompanySchema:
