# backEnd/schema/schemas.js
@@ -20,15 +20,14 @@ const loginSchema = {
 };
 const updateUserSchema = {
   type: "object",
-  required: ["upd_name", "upd_last_name", "upd_email", "upd_profile", "upd_is_admin", "upd_user_password", "upd_user_password_confirmation"],
+  required: ["name", "last_name", "email", "profile", "is_admin", "user_password"],
   properties: {
-    upd_name: { type: "string"},
-    upd_last_name: { type: "string"},
-    upd_email: { type: "string", pattern: "^[A-Za-z0-9._-]*@[a-z]*[.]com$"},
-    upd_profile: { type: "string"},
-    upd_is_admin: { type: "string"},
-    upd_user_password: { type: "string", pattern: "^[A-Za-z0-9.!#$%&‘*+=?^_`{|}~-]{6,}$"},
-    upd_user_password_confirmation: { type: "string", pattern: "^[A-Za-z0-9.!#$%&‘*+=?^_`{|}~-]{6,}$"},
+    name: { type: "string"},
+    last_name: { type: "string"},
+    email: { type: "string", pattern: "^[A-Za-z0-9._-]*@[a-z]*[.]com$"},
+    profile: { type: "string"},
+    is_admin: { type: "string"},
+    user_password: { type: "string", pattern: "^[A-Za-z0-9.!#$%&‘*+=?^_`{|}~-]{6,}$"},
   }
 };
 const regionSchema = {
